--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>zl-wzgp</artifactId>
   <!-- Note: !!! This version is used in these places, kubernetes deployment files, image names in deployment files,
         openapi specification. Once updated, change all those places too. !!! -->
-  <version>0.3.0-SNAPSHOT</version>
+  <version>0.3.1</version>
   <name>zl-wzgp</name>
   <url>http://maven.apache.org</url>
   <properties>
